<resources>
    <string name="app_name">Tutor Service</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="search">Search</string>

    <!-- Strings related to register -->
    <string name="register">Register</string>
    <string name="new_password">Enter a password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_email">Enter an email</string>
    <string name="zip_code">Enter a zip code</string>
    <string name="register_text"><u>Not a member? Register here!</u></string>
    <string name="register_tutor"><u>Want to register as a tutor? Click here!</u></string>
    <string name="first_name">First name</string>
    <string name="full_name">Full name (First Last)</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="phone">Phone number</string>
    <string name="birth_date">Date of birth (mm-dd-yyyy)</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="student_type">Student</string>
    <string name="tutor_type">Tutor</string>
    <string name="select_user_type">Select which you wish to register as:</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="setup_tutoring_session">Setup Tutoring Session</string>
    <string name="submit">Submit</string>
    <string name="optional">Optional Information</string>
    <string name="prompt_signin">Sign in to see full content</string>
    <string name="not_rated">No Ratings</string>
    <string name="see_reviews"><u>See Reviews</u></string>
    <!-- array used for drop down menu in tutor reg -->
    <string-array name="categories">
        <item>Programming</item>
        <item>Math</item>
        <item>Science</item>
        <item>Social Studies</item>
        <item>English</item>
    </string-array>

    <!--Strings for Communications -->
    <string name="Button_Email">E-mail</string>
    <string name="Button_Phone">Phone</string>
    <string name="Button_SmS">Text</string>


    <!-- Strings Appointmentents -->
    <string name="page_name">Appointments Menu</string>
    <string name="Make_appointement">Your Schedule</string>
    <string name="Look_appointments"> Schedule Appointments</string>
    <string name="Review_Button"> Review</string>
    <string name="Confirm_Button"> Confirm</string>

    <string-array name="appt_hours">
        <item>6:00am</item>
        <item>7:00am</item>
        <item>8:00am</item>
        <item>9:00am</item>
        <item>10:00am</item>
        <item>11:00am</item>
        <item>12:00pm</item>
        <item>1:00pm</item>
        <item>2:00pm</item>
        <item>3:00pm</item>
        <item>4:00pm</item>
        <item>5:00pm</item>
        <item>6:00pm</item>
        <item>7:00pm</item>
        <item>8:00pm</item>
        <item>9:00pm</item>
    </string-array>

    <string-array name="Days_of_the_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="Time1"> 12-1pm</string>
    <string name="Time2"> 1-2pm</string>
    <string name="Time3"> 2-3pm</string>
    <string name="Time4"> 3-4pm</string>
    <string name="Time5"> 4-5pm</string>


</resources>
