<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.cse3310.TutorAddSession">

    <Spinner
        android:id="@+id/tutor_category_spinner"
        android:layout_width="228dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/categories"
        app:layout_constraintStart_toStartOf="@+id/setup_tutoring_category_text"
        app:layout_constraintTop_toBottomOf="@+id/setup_tutoring_category_text" />

    <TextView
        android:id="@+id/setup_tutoring_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/setup_tutoring_session"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setup_tutoring_category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="@+id/setup_tutoring_text"
        app:layout_constraintTop_toBottomOf="@+id/setup_tutoring_text" />

    <TextView
        android:id="@+id/setup_tutoring_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@+id/setup_tutoring_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_category_spinner" />

    <Button
        android:id="@+id/setup_tutoring_date_button"
        android:layout_width="113dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_date"
        app:layout_constraintStart_toStartOf="@+id/setup_tutoring_date_text"
        app:layout_constraintTop_toBottomOf="@+id/setup_tutoring_date_text" />

    <EditText
        android:id="@+id/setup_tutoring_datevalue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/setup_tutoring_date_button"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/setup_tutoring_date_button"
        app:layout_constraintTop_toBottomOf="@+id/setup_tutoring_date_text" />

    <Button
        android:id="@+id/setup_tutoring_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="@+id/setup_tutoring_text"
        app:layout_constraintTop_toBottomOf="@+id/setup_tutoring_date_button" />

</android.support.constraint.ConstraintLayout>
