<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.cse3310.Appointments_Menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:text="@string/page_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="196dp"
        android:layout_height="53dp"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="73dp"
        android:background="@drawable/custom_button"
        android:foreground="@drawable/ripple_effect"
        android:onClick="makeAppointment"
        android:text="@string/Look_appointments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_button"
        android:foreground="@drawable/ripple_effect"
        android:onClick="viewAppointments"
        android:text="@string/Make_appointement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</android.support.constraint.ConstraintLayout>

