<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/communications_layout"
    tools:context="project.cse3310.Communications">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="329dp"
        android:layout_height="59dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="name" />

    <TextView
        android:id="@+id/profile_subject"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_marginEnd="134dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        tools:text="subject" />

    <Button
        android:id="@+id/profile_phone_button"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:foreground="@drawable/ripple_effect"
        android:onClick="callTutor"
        android:text="@string/Button_Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_button" />

    <Button
        android:id="@+id/profile_email_button"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:foreground="@drawable/ripple_effect"
        android:onClick="emailTutor"
        android:text="@string/Button_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone_button" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:isIndicator="true"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_subject" />

    <Button
        android:id="@+id/review_button"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:foreground="@drawable/ripple_effect"
        android:isIndicator="true"
        android:onClick="apptTutor"
        android:text="Make Appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availTimes" />

    <TextView
        android:id="@+id/rating_number"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/availTimes"
        android:layout_width="297dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_reviews_button" />

    <TextView
        android:id="@+id/see_reviews_button"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/see_reviews"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:onClick="displayReviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

</android.support.constraint.ConstraintLayout>
